--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html>
 <head>
-    <meta charset="UTF-8">
+	<meta charset="utf-8">
+	<title>Tarefa</title>
+	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
-<body>
-    <h1>Isso e apenas um teste; IGNORE</h1>
-    <h2>Isso e apenas um teste; IGNORE</h2>
-    <h1>Isso e apenas um teste; IGNORE</h1>
-    <h2>Isso e apenas um teste; IGNORE</h2>
-</body>
-
+	<body>
+		<div id="mainDiv">
+			<h1>Titulo da página!</h1>
+		</div>
+	</body>
 </html>
